--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -11,15 +11,15 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.8'
+    - name: run model  
+      run:  python main.py
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -27,6 +27,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       uses: py-actions/flake8@v1
-    - name: run model  
-      run:  python main.py
+
        
