--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -24,8 +24,8 @@ jobs:
         pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
        
-    - name: Lint with flake8
-      uses: py-actions/flake8@v1
+ #   - name: Lint with flake8
+ #     uses: py-actions/flake8@v1
   run:
     runs-on: ubuntu-latest
     needs: build
