--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -13,6 +13,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+       
+    - name: Lint with flake8
+      uses: py-actions/flake8@v1
+  run:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
@@ -21,14 +33,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-       
- #   - name: Lint with flake8
- #     uses: py-actions/flake8@v1
-  run:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - name: Run python file
-      run: python ./main.py    
+      run: python main.py    
