--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -40,7 +40,7 @@ jobs:
       run: python main.py
   upload:
     runs-on: ubuntu-latest
-    needs: build
+    needs: run
     steps:
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
@@ -50,5 +50,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME}}
-          SOURCE_DIR: '.github' 
+          #SOURCE_DIR: 'mnist_model.pth' 
           AWS_REGION: 'us-west-2'
