--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -38,12 +38,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run python file
       run: python main.py
-  upload:
-    runs-on: ubuntu-latest
-    needs: run
-    steps:
-      - uses: actions/checkout@master
-      - uses: jakejarvis/s3-sync-action@master
+    - name: upload
+      uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --delete
         env:
