--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -20,7 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-       
+        #pip install flake8-docstrings
+        #pip install pep8-naming
     - name: Lint with flake8
       uses: py-actions/flake8@v1
   run:
