--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run python file
-      run: python main.py
+      run: python src/main.py
     - name: upload
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -47,5 +47,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME}}
-        SOURCE_DIR: 'output/mnist_model.pth' 
+        SOURCE_DIR: 'src/mnist_model.pth' 
         AWS_REGION: 'us-west-2'
