--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -20,8 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-        #pip install flake8-docstrings
-        #pip install pep8-naming
+        pip install flake8-docstrings
+        pip install pep8-naming
     - name: Lint with flake8
       uses: py-actions/flake8@v1
   run:
@@ -47,5 +47,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME}}
-        SOURCE_DIR: '/home/runner/work/seasalt_challenge/seasalt_challenge/src/mnist_model.pth' 
+        #SOURCE_DIR: '/home/runner/work/seasalt_challenge/seasalt_challenge/src/mnist_model.pth' 
         AWS_REGION: 'us-west-2'
