--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -5,8 +5,8 @@ name: Python application
 
 on:
   push:
-    tags:
-       - 'release'
+    #tags:
+       #- 'release'
 jobs:
   build:
     runs-on: ubuntu-latest
