add output folder with .gitkeep

--- a/.github/workflows/continuos-integration-workflow.yml
+++ b/.github/workflows/continuos-integration-workflow.yml
@@ -47,5 +47,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME}}
-        SOURCE_DIR: './mnist_model.pth' 
+        SOURCE_DIR: 'output' 
         AWS_REGION: 'us-west-2'
