--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -4,24 +4,10 @@
 name: Python application
 
 on:
-  [push,pull_request]:
+  push:
+    #tags:
+       #- 'release'
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2 
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8' 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-        pip install flake8-docstrings
-        pip install pep8-naming
-    - name: Lint with flake8
-      uses: py-actions/flake8@v1
   run:
     runs-on: ubuntu-latest
     needs: build
@@ -36,5 +22,14 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run python file
-      run: python src/main.py "Test"
-    
+      run: python src/main.py
+    - name: upload
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --delete
+      env:
+        AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+        AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME}}
+        SOURCE_DIR: 'output' 
+        AWS_REGION: 'us-west-2'
