fix error with 2 work flowa

--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -4,9 +4,8 @@
 name: Python application
 
 on:
-  push:
-    #tags:
-       #- 'release'
+    tags:
+       - 'release'
 jobs:
   run:
     runs-on: ubuntu-latest
