--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -8,7 +8,23 @@ on:
     tags:
        - 'release'
 jobs:
-  run:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2 
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8' 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+        pip install flake8-docstrings
+        pip install pep8-naming
+    - name: Lint with flake8
+      uses: py-actions/flake8@v1
+  TrainandDeployModel:
     runs-on: ubuntu-latest
     needs: build
     steps:
