--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -37,7 +37,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run python file
-      run: python src/main.py
+      run: python src/main1.py
     - name: upload
       uses: jakejarvis/s3-sync-action@master
       with:
